Bug 1188265 - No manual JS_ClearPendingException when StructuredCloneHelper is used, r=smaug