dom/base/StructuredCloneHelper.cpp
@@ -211,42 +211,51 @@ StructuredCloneHelper::~StructuredCloneHelper()
   Shutdown();
 }
 
-bool
-StructuredCloneHelper::Write(JSContext* aCx,
-                             JS::Handle<JS::Value> aValue)
-{
-  return Write(aCx, aValue, JS::UndefinedHandleValue);
-}
-
-bool
+void
 StructuredCloneHelper::Write(JSContext* aCx,
                              JS::Handle<JS::Value> aValue,
-                             JS::Handle<JS::Value> aTransfer)
+                             ErrorResult& aRv)
 {
-  bool ok = StructuredCloneHelperInternal::Write(aCx, aValue, aTransfer);
-  mTransferringPort.Clear();
-  return ok;
+  Write(aCx, aValue, JS::UndefinedHandleValue, aRv);
 }
 
-bool
+void
+StructuredCloneHelper::Write(JSContext* aCx,
+                             JS::Handle<JS::Value> aValue,
+                             JS::Handle<JS::Value> aTransfer,
+                             ErrorResult& aRv)
+{
+  if (!StructuredCloneHelperInternal::Write(aCx, aValue, aTransfer)) {
+    aRv.Throw(NS_ERROR_DOM_DATA_CLONE_ERR);
+  }
+
+  mTransferringPort.Clear();
+}
+
+void
 StructuredCloneHelper::Read(nsISupports* aParent,
                             JSContext* aCx,
-                            JS::MutableHandle<JS::Value> aValue)
+                            JS::MutableHandle<JS::Value> aValue,
+                            ErrorResult& aRv)
 {
   mozilla::AutoRestore<nsISupports*> guard(mParent);
   mParent = aParent;
 
-  bool ok = StructuredCloneHelperInternal::Read(aCx, aValue);
+  if (!StructuredCloneHelperInternal::Read(aCx, aValue)) {
+    JS_ClearPendingException(aCx);
+    aRv.Throw(NS_ERROR_DOM_DATA_CLONE_ERR);
+  }
+
   mBlobImplArray.Clear();
-  return ok;
 }
 
-bool
+void
 StructuredCloneHelper::ReadFromBuffer(nsISupports* aParent,
                                       JSContext* aCx,
                                       uint64_t* aBuffer,
                                       size_t aBufferLength,
-                                      JS::MutableHandle<JS::Value> aValue)
+                                      JS::MutableHandle<JS::Value> aValue,
+                                      ErrorResult& aRv)
 {
   MOZ_ASSERT(!mBuffer, "ReadFromBuffer() must be called without a Write().");
   MOZ_ASSERT(aBuffer);
@@ -254,9 +263,12 @@ StructuredCloneHelper::ReadFromBuffer(nsISupports* aParent,
   mozilla::AutoRestore<nsISupports*> guard(mParent);
   mParent = aParent;
 
-  return JS_ReadStructuredClone(aCx, aBuffer, aBufferLength,
-                                JS_STRUCTURED_CLONE_VERSION, aValue,
-                                &gCallbacks, this);
+  if (!JS_ReadStructuredClone(aCx, aBuffer, aBufferLength,
+                              JS_STRUCTURED_CLONE_VERSION, aValue,
+                              &gCallbacks, this)) {
+    JS_ClearPendingException(aCx);
+    aRv.Throw(NS_ERROR_DOM_DATA_CLONE_ERR);
+  }
 }
 
 void
